# ShiftLog-Clone

./: .gitignore  README.md  app.py  applog.py  cash_out_frame.py  chip_fill_frame.py  db.py  edit_pop.py  events_frame.py  information_frame.py  information_given_frame.py  information_received_frame.py  jackpot_call_frame.py  jackpot_frame.py  logic.py  login_controller.py  personel_frame.py  pyproject.toml  register_event_frame.py  requirements.txt  roulette_calculator_frame.py  single_chip_frame.py  single_frame_runner.py  tables_frame.py  watched_frame.py
face_recognizer/: face_db  face_login_popup.py  recognize_faces.py
frames/: breaks_frame.py  camera_frame.py  cash_out_frame.py  change_style.py  chip_fill_frame.py  constants.py  edit_pop.py  events_frame.py  information_frame.py  jackpot_call_frame.py  jackpot_frame.py  login_frame.py  main_frame.py  personel_frame.py  plot_frame.py  register_event_frame.py  roulette_calculator_frame.py  single_chip_frame.py  tables_frame.py  watched_frame.py
frames/util_components/: __init__.py  date_entry.py  hour_entry.py  username_entry.py
