[tool.poetry]
name = "shiftlog-clone"
version = "0.1.0"
description = "casino shift thing"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prom = "^3.1.0"
decorators = "^2.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
